k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ota-webserver
  labels:
    app: ota-webserver
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: ota-webserver
